build: inline AndroidCommon into the application convention plugin
AndroidCommon.kt described itself as "shared Android compile/packaging
defaults for both library and application modules" but had only one
caller — the application plugin. The KMP-library plugin configures its
Android target inline. Inlined the configuration into the only consumer
and removed the misleading abstraction.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>